# kyoto-cycling-api

./: .dockerignore  .env.example  .gcloudignore  .gitignore  API reference.md  API_USAGE.md  DEPLOYMENT.md  Dockerfile  FRONTEND_INTEGRATION.md  Frontend Design.md  README.md  TEST_PLAN.md  cloudbuild.yaml  cUserstadnvkyoto-cycling-apitemp_result.json  deploy.sh  parkings_and_ports_test.html  pyproject.toml  routes_visualization.html  share_cycle_route_test.html
app/: __init__.py  main.py
app/data/: __init__.py  parkings.py
app/models/: __init__.py  common.py  parking.py  port.py  route.py
app/routers/: __init__.py  ports.py  route.py
app/services/: __init__.py  gbfs_client.py  mapbox_client.py  route_calculator.py  voice_generator.py
scripts/: test_parkings_and_ports.py  test_share_cycle_route.py  visualize_routes.py
tests/: __init__.py  conftest.py  test_health.py  test_route_api.py  test_route_calculator.py  test_usecases.py
